Changed color palette Fixed header z-index issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
         @apply border-border;
     }
     html {
-        @apply bg-background text-foreground;
+        @apply bg-background text-foreground accent-primary;
     }
     h1, .h1,
     h2, .h2,
